--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,5 @@
-== README
+Allows users to post anonymous comments. 
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Originally all comments would need to be approved by an admin. Devsise invitable was used so that admin accounts could only be created through an email invitation. 
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Users wanted posts to be unfiltered, so posts are now displayed automatically. Users now have the ability to monitor the posts themselves, with up and downvotes as well as the power to remove anything really bad.
